--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,10 @@ $color-bkg-light: #230d60;
   --responsive-max-width: 799px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -379,6 +383,22 @@ iframe {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   content: '\f09e';
+}
+
+.scroll_to_top {
+  display: block;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 99;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 2rem;
+  opacity: 0.7;
+}
+
+.scroll_to_top:hover {
+  opacity: 1;
 }
 
 @import 'keyframes', 'large';
