--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {{- if eq hugo.Environment "production" }}
-    <meta name="ROBOTS" content="INDEX, FOLLOW">
+    <meta name="robots" content="index, follow">
     {{- else -}}
-    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+    <meta name="robots" content="noindex, nofollow">
     {{- end -}}
 
     {{- with resources.Get "css/normalize.css" | minify -}}
