--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
 </head>
 
 <body id="top">
-    <nav class="sitenav">
+    <nav class="site">
         <ul>
             {{- $currentPage := . -}}
             {{- range .Site.Menus.main -}}
