--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{- define "head" -}}
     <title>{{ .Title }}</title>
+
+    {{- with resources.Get "scss/index.scss" | toCSS | minify -}}
+    <link rel="stylesheet" href="{{ .RelPermalink }}" type="text/css">
+    {{- end -}}
+
 {{- end -}}
 
 {{ define "header" }}
