--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,10 @@
 
     {{ partial "google_font" (dict "fontFamily" "Press Start 2P" "text" "as Code") }}
     {{ partial "google_font" (dict "fontFamily" "Rock Salt" "text" "I'm social") }}
+
+    {{- with resources.Get "scss/index.scss" | toCSS | minify -}}
+    <link rel="stylesheet" href="{{ .RelPermalink }}" type="text/css">
+    {{- end -}}
 {{ end -}}
 
 {{- define "header" -}}
