--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,11 @@
 {{- define "head" -}}
     <title>{{ .Site.Title }} - {{ .Title }}</title>
-    {{ partial "google_font" (dict "fontFamily" "Press Start 2P" "text" "Page not found") }}
+
+    {{ partial "google_font" (dict "fontFamily" "Press Start 2P" "text" .Title) }}
+
+    {{- with resources.Get "scss/404.scss" | toCSS | minify -}}
+    <style>{{ .Content | safeCSS }}</style>
+    {{- end -}}
 {{ end -}}
 
 {{- define "header" -}}
