--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,12 @@
     <meta name="robots" content="noindex, nofollow">
     {{- end -}}
 
+    {{- if isset .Page.Params "description" }}
+    <meta name="description" content="{{ .Site.Params.description }} - {{ .Page.Params.description }}">
+    {{- else -}}
+    <meta name="description" content="{{ .Site.Params.description }} - {{ .Page.Title }}">
+    {{- end -}}
+
     {{- with resources.Get "css/normalize.css" | minify -}}
     <link rel="stylesheet" href="{{ .RelPermalink }}" type="text/css">
     {{- end -}}
