--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -27,7 +27,17 @@
     {{- end -}}
 
     <footer>
-        <!-- FIXME add tags list -->
+        {{- if and $section.Params.show_tags (gt $section.Site.Taxonomies.tags 0) -}}
+        <ul class="tag_list">
+            {{ range $section.Site.Taxonomies.tags.ByCount }}
+            <li>
+                <a href="/tags/{{ .Term | urlize }}">
+                    {{ .Term }}
+                </a>
+            </li>
+            {{ end }}
+        </ul>
+        {{- end -}}
 
         <ul>
             <li>
