--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -32,7 +32,7 @@
             {{ range $section.Site.Taxonomies.tags.ByCount }}
             <li>
                 <a href="/tags/{{ .Term | urlize }}">
-                    {{ .Term }}
+                    #{{ .Term }}
                 </a>
             </li>
             {{ end }}
