--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
 {{- define "main" -}}
 
     {{ $context := . }}
-    {{ range $rowNumber :=  (seq 2) }}{{/*  fixme  */}}
+    {{ range $rowNumber :=  (seq 2) }}
     <div
         class="index_content row_{{ $rowNumber }}"
     >
