--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -215,7 +215,10 @@ iframe {
 }
 
 .hide {
-  display: none;
+  visibility: hidden;
+  display: block;
+  width: 0;
+  height: 0;
 }
 
 @import 'keyframes', 'large';
