--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -77,7 +77,7 @@
         </p>
 
         <p>
-            All content licensed under
+            Except where otherwise noted, content on this site is licensed under
             <a
                 href="https://creativecommons.org/licenses/by-sa/4.0/"
                 title="Go to Creative Commons license page"
@@ -86,7 +86,7 @@
                 <i class="fab fa-creative-commons-by"></i>
                 <i class="fab fa-creative-commons-sa"></i>
             </a>
-            unless otherwise stated
+            Creative Commons Attribution 4.0 International license
         </p>
     </footer>
 
