--- a/layouts/partials/social_icons.html
+++ b/layouts/partials/social_icons.html
@@ -7,6 +7,7 @@
         <a
             href="{{ .URL }}"
             title="{{ $title }}"
+            aria-label="{{ $title }}"
         >
             <span class="hide">{{ $title }}</span>
             <i class="fab fa-{{ $menu_entry.Name }} fa-3x"></i>
