--- a/layouts/partials/social_icons.html
+++ b/layouts/partials/social_icons.html
@@ -15,14 +15,14 @@
     </li>
     {{ end }}
 
-    {{- $text := "Contact me via email" -}}
+    {{- $title := "Contact me via email" -}}
     <li>
         <a
             href="/contact"
-            title="{{ $text }}"
-            aria-label="{{ $text }}"
+            title="{{ $title }}"
+            aria-label="Go to Contact page"
         >
-            <span class="hide">{{ $text }}</span>
+            <span class="hide">{{ $title }}</span>
             <i class="fas fa-at fa-3x"></i>
         </a>
     </li>
