--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,6 +7,15 @@
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $title | safeHTML }}
     {{ end -}}
 
+    <style>
+        main {
+            display: grid;
+            gap: 2rem;
+            grid-template-columns: 2fr 5fr;
+            grid-row: 1;
+        }
+    </style>
+
 {{ end -}}
 
 {{ define "header" }}
@@ -23,6 +32,18 @@
 
 {{ define "main" }}
 {{ $section := . }}
+
+<aside class="tags">
+    <ul class="tag_list">
+        {{ range .Site.Taxonomies.tags.ByCount }}
+        <li>
+            <a href="/tags/{{ .Term | urlize }}">
+                #{{ .Term }}
+            </a>
+        </li>
+        {{ end }}
+    </ul>
+</aside>
 
 <section class="list">
 {{- range (.Paginator 5).Pages -}}
