--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,11 +8,10 @@
     {{ end -}}
 
     <style>
-        main {
+        main > div {
             display: grid;
             gap: 2rem;
             grid-template-columns: 2fr 5fr;
-            grid-row: 1;
         }
     </style>
 
@@ -33,23 +32,27 @@
 {{ define "main" }}
 {{ $section := . }}
 
-<aside class="tags">
-    <ul class="tag_list">
-        {{ range .Site.Taxonomies.tags.ByCount }}
-        <li>
-            <a href="/tags/{{ .Term | urlize }}">
-                #{{ .Term }}
-            </a>
-        </li>
-        {{ end }}
-    </ul>
-</aside>
+<div>
 
-<section class="list">
-{{- range (.Paginator 5).Pages -}}
-    {{ partial "article" (dict "article" . "section" $section) }}
-{{- end -}}
-</section>
+    <aside class="tags">
+        <ul class="tag_list">
+            {{ range .Site.Taxonomies.tags.ByCount }}
+            <li>
+                <a href="/tags/{{ .Term | urlize }}">
+                    #{{ .Term }}
+                </a>
+            </li>
+            {{ end }}
+        </ul>
+    </aside>
+
+    <section class="list">
+    {{- range (.Paginator 5).Pages -}}
+        {{ partial "article" (dict "article" . "section" $section) }}
+    {{- end -}}
+    </section>
+
+</div>
 
 {{- $paginator := .Paginate (where .Pages "Type" "posts") -}}
 <nav class="paginator">
