--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     {{- partial "google_font" (dict "fontFamily" "Press Start 2P" "text" "as Code") }}
     {{- partial "google_font" (dict "fontFamily" "Rock Salt" "text" "I'm social") }}
 
-    {{- range (slice "https://audio3.mixcloud.com" "https://thumbnailer.mixcloud.com" "https://yt3.ggpht.com" "https://i.ytimg.com" "https://fonts.gstatic.com") -}}
+    {{- range (slice "https://thumbnailer.mixcloud.com" "https://fonts.gstatic.com") -}}
     <link rel="preconnect" href="{{ . }}">
     {{- end -}}
 
