--- a/layouts/shortcodes/mixcloud.html
+++ b/layouts/shortcodes/mixcloud.html
@@ -1,6 +1,18 @@
-<!-- <iframe width="100%" height="400" src="https://www.mixcloud.com/widget/iframe/?feed=%2Fal3xf%2Finterstellar-lounge-caf%C3%A8-session-2%2F" frameborder="0" ></iframe> -->
-{{ with .Get 0 }}
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-    <iframe src="https://www.mixcloud.com/widget/iframe/?feed={{ . | safeHTML }}" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" allowfullscreen="" title="Mixcloud Mix"></iframe>
+{{- $link := printf "https://www.mixcloud.com%s" (.Get 0) -}}
+{{- $thumbnail := .Get 1 -}}
+
+<div
+    class="media"
+>
+    <a
+        href="{{ $link }}"
+        title="Listen this music mix on Mixcloud`"
+    >
+        <img
+            src="{{ $thumbnail }}"
+            alt="Mixcloud music mix thumbnail"
+            class="mixcloud"
+        />
+        <i class="fas fa-play-circle fa-4x"></i>
+    </a>
 </div>
-{{ end }}
