--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -84,6 +84,7 @@ header.site {
 }
 
 footer.site {
+  color: white;
   border-radius: 1rem;
   padding: 5rem 0.5rem 1rem;
   background: linear-gradient(to top, $color-bkg-dark, $color-bkg-light);
