--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -38,7 +38,7 @@
             {{ end }}
             <li>
                 <a href="/tags/">
-                    More tags...
+                    More tags&#8230;
                 </a>
             </li>
         </ul>
