--- a/assets/scss/_large.scss
+++ b/assets/scss/_large.scss
@@ -1,11 +1,16 @@
 @media screen and (min-width: 800px) {
   header.site {
-    margin: 18rem 0;
+    margin: 0 5rem;
   }
 
-  body > header {
-    display: flex;
-    justify-content: center;
+  div.claim {
+    h1,
+    h2,
+    h3 {
+      font-size: 2rem;
+      line-height: 2.3rem;
+      padding-top: 2rem;
+    }
   }
 
   div.index {
