--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,7 +1,8 @@
 @import 'variables';
 
 header.site {
-  margin: 3rem 0;
+  height: 100vh;
+  margin: 0;
 }
 
 .claim > h2 > a:last-child {
@@ -23,6 +24,13 @@ div.index {
   background-color: $color-bkg-light;
 }
 
+div.hero {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+}
+
 div.social ul > li {
   margin: 0 10px 15px;
 }
@@ -30,7 +38,7 @@ div.social ul > li {
 div.claim {
   display: flex;
   flex-flow: column wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   color: $color-text;
 
   h1,
@@ -38,6 +46,7 @@ div.claim {
   h3 {
     font-size: 1.5rem;
     font-weight: normal;
+    line-height: 1.7rem;
   }
 
   h2,
@@ -85,7 +94,7 @@ div.social {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
   span {
     color: $color-text;
