--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,34 +40,36 @@
 </head>
 
 <body id="top">
-    <nav class="site">
-        <ul>
-            {{- $currentPage := . -}}
-            {{- range .Site.Menus.main -}}
-            <li>
-                {{- $url := .URL -}}
-                {{- $class := "sidebar-nav-item" -}}
-                {{- if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) -}}
-                    {{- $class = (printf "%s active" $class) -}}
-                {{- end -}}
-                {{- if eq .Name "RSS" -}}
-                    {{- with $currentPage.Params.feed -}}{{- $url = . -}}{{- end -}}
-                    {{- $class = (printf "%s rss" $class) -}}
-                {{- end -}}
+    <header class="site">
+        <nav class="site">
+            <ul>
+                {{- $currentPage := . -}}
+                {{- range .Site.Menus.main -}}
+                <li>
+                    {{- $url := .URL -}}
+                    {{- $class := "sidebar-nav-item" -}}
+                    {{- if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) -}}
+                        {{- $class = (printf "%s active" $class) -}}
+                    {{- end -}}
+                    {{- if eq .Name "RSS" -}}
+                        {{- with $currentPage.Params.feed -}}{{- $url = . -}}{{- end -}}
+                        {{- $class = (printf "%s rss" $class) -}}
+                    {{- end -}}
 
-                <a
-                    class="{{ $class }}"
-                    href="{{ $url }}"
-                    {{- with .Title }}title="{{ . }}"{{ end -}}
-                >
-                    {{- .Name -}}
-                </a>
-            </li>
-            {{- end -}}
-        </ul>
-    </nav>
+                    <a
+                        class="{{ $class }}"
+                        href="{{ $url }}"
+                        {{- with .Title }}title="{{ . }}"{{ end -}}
+                    >
+                        {{- .Name -}}
+                    </a>
+                </li>
+                {{- end -}}
+            </ul>
+        </nav>
 
-    <header class="site">{{ block "header" . }}{{ end }}</header>
+        {{ block "header" . }}{{ end }}
+    </header>
 
     <main>{{ block "main" . }}{{ end }}</main>
 
