--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,4 +4,4 @@ $color-text: white;
 $color-bkg-dark: #050723;
 // $color-bkg-light: #151737;
 // $color-bkg-light: rgb(29, 1, 29);
-$color-bkg-light: #230d60;
+$color-bkg-light: #070b33;
