--- a/assets/scss/_section.scss
+++ b/assets/scss/_section.scss
@@ -16,10 +16,6 @@ section.list {
   padding-top: 1rem;
 }
 
-section footer ul li + li {
-  margin-left: 1rem;
-}
-
 .paginator > ul > li + li {
   padding-left: 3rem;
 }
@@ -44,6 +40,7 @@ section {
       padding-bottom: 3rem;
       display: flex;
       flex-wrap: wrap;
+      gap: 1rem;
       justify-content: center;
     }
   }
