--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -28,17 +28,24 @@
 
     <footer>
         {{- if and $section.Params.show_tags (gt $section.Site.Taxonomies.tags 0) -}}
+        <h4 class="tag_list">Popular categories</h4>
         <ul class="tag_list">
             {{ range first 10 $section.Site.Taxonomies.tags.ByCount}}
             <li>
-                <a href="/tags/{{ .Term | urlize }}">
+                <a
+                    class="button"
+                    href="/tags/{{ .Term | urlize }}"
+                >
                     {{ .Term }}
                 </a>
             </li>
             {{ end }}
             <li>
-                <a href="/tags/">
-                    More tags&#8230;
+                <a
+                    class="button"
+                    href="/tags/"
+                >
+                    More&#8230;
                 </a>
             </li>
         </ul>
