--- a/assets/scss/_section.scss
+++ b/assets/scss/_section.scss
@@ -22,8 +22,7 @@ section.list {
 
 section {
   color: $color-text;
-  background-color: $color-bkg-light;
-  filter: alpha(opacity=100);
+  background: linear-gradient(to bottom, $color-bkg-light 0%, $color-bkg-dark 50%, $color-bkg-light 100%,);
   border-radius: 1rem;
 
   > header {
