--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -4,10 +4,6 @@ header.site {
   margin: 0;
 }
 
-ul.tag_list li a {
-  border-radius: 1rem;
-}
-
 div.social ul > li {
   margin: 0 10px 15px;
 }
@@ -19,22 +15,6 @@ div.social ul > li {
 .claim > h3 > a:hover {
   text-decoration: none;
   color: $color-secondary;
-}
-
-ul.tag_list {
-  margin: 1rem 0 3rem;
-}
-
-ul.tag_list li:last-child a {
-  background-color: $color-bkg-light;
-  color: $color-main;
-  border-radius: 1rem;
-}
-
-h4.tag_list {
-  color: $color-main;
-  text-transform: uppercase;
-  padding-bottom: 1rem;
 }
 
 div.index {
@@ -182,4 +162,5 @@ div.media {
 
 @import 'article';
 @import 'section';
+@import 'tag_list';
 @import 'keyframes', 'large';
