--- a/assets/scss/section.scss
+++ b/assets/scss/section.scss
@@ -1,4 +1,48 @@
 @import 'variables';
 @import 'section';
 @import 'article';
+@import 'tag_list';
 @import 'large';
+
+header.site {
+  height: initial;
+  margin: unset;
+}
+
+h1 {
+  font-size: 3.5rem;
+  margin: 3rem 0 4rem;
+  text-align: right;
+}
+
+h4 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+ul.tag_list {
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+footer {
+  margin-top: 3rem;
+}
+
+aside {
+  margin-top: 4rem;
+}
+
+@media screen and (min-width: 800px) {
+  main {
+    margin-top: 2rem;
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: 3fr 1fr;
+  }
+
+  aside {
+    margin-top: 12rem;
+  }
+}
