--- a/assets/scss/_tag_list.scss
+++ b/assets/scss/_tag_list.scss
@@ -2,32 +2,27 @@ h4.tag_list {
   color: $color-main;
   text-transform: uppercase;
   padding-bottom: 1rem;
+  font-size: 2rem;
 }
 
 ul.tag_list li a {
   color: $color-main;
   background-color: $color-bkg-light;
-  border-radius: 1rem;
 }
 
 ul.tag_list li a:hover {
   color: $color-bkg-dark;
   background-color: $color-main;
-  border-radius: 1rem;
 }
 
 ul.tag_list {
   font-size: 1.2rem;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 1rem 0 3rem;
 }
 
 ul.tag_list li {
   padding: 0.5rem;
-}
-
-ul.tag_list li.more a {
-  background-color: $color-bkg-light;
-  color: $color-main;
-  border-radius: 1rem;
 }
